--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 
 # .tfvars files
 *.tfvars
+
+# provider file containing subscriptionId and (potentially) secrets
+provider.tf
+
+# backend file containing storage account key
+backend.tf
